--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,7 +9,10 @@ readme = "README.md"
 requires-python = ">=3.11"
 dependencies = [
     "litellm (>=1.68.0,<2.0.0)",
-    "kafka-python (>=2.2.4,<3.0.0)"
+    "kafka-python (>=2.2.4,<3.0.0)",
+    "pydantic-settings (>=2.9.1,<3.0.0)",
+    "dependency-injector (>=4.46.0,<5.0.0)",
+    "python-dotenv (>=1.1.0,<2.0.0)",
 ]
 
 
