--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,10 +9,13 @@ readme = "README.md"
 requires-python = ">=3.11"
 dependencies = [
     "litellm (>=1.68.0,<2.0.0)",
-    "kafka-python (>=2.2.4,<3.0.0)",
     "pydantic-settings (>=2.9.1,<3.0.0)",
     "dependency-injector (>=4.46.0,<5.0.0)",
     "python-dotenv (>=1.1.0,<2.0.0)",
+    "psycopg2-binary (>=2.9.10,<3.0.0)",
+    "fastapi (>=0.115.12,<0.116.0)",
+    "aiokafka (>=0.12.0,<0.13.0)",
+    "uvicorn (>=0.34.2,<0.35.0)",
 ]
 
 
