Update project structure

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,6 +18,7 @@ dependencies = [
     "uvicorn (>=0.34.2,<0.35.0)",
     "mcp (>=1.9.1,<2.0.0)",
     "fastapi-mcp (>=0.3.4,<0.4.0)",
+    "fastembed (>=0.7.0,<0.8.0)",
 ]
 
 
