--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,6 +19,7 @@ dependencies = [
     "mcp (>=1.9.1,<2.0.0)",
     "fastapi-mcp (>=0.3.4,<0.4.0)",
     "fastembed (>=0.7.0,<0.8.0)",
+    "neo4j (>=5.28.1,<6.0.0)",
 ]
 
 
