--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,6 +20,7 @@ dependencies = [
     "fastapi-mcp (>=0.3.4,<0.4.0)",
     "fastembed (>=0.7.0,<0.8.0)",
     "neo4j (>=5.28.1,<6.0.0)",
+    "jsonformatter (>=0.3.4,<0.4.0)",
 ]
 
 
