--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,6 +21,7 @@ dependencies = [
     "fastembed (>=0.7.0,<0.8.0)",
     "neo4j (>=5.28.1,<6.0.0)",
     "jsonformatter (>=0.3.4,<0.4.0)",
+    "redis (>=6.2.0,<7.0.0)",
 ]
 
 
