--- a/pyproject.toml
+++ b/pyproject.toml
@@ -22,6 +22,7 @@ dependencies = [
     "neo4j (>=5.28.1,<6.0.0)",
     "jsonformatter (>=0.3.4,<0.4.0)",
     "redis (>=6.2.0,<7.0.0)",
+    "jinja2 (>=3.1.6,<4.0.0)",
 ]
 
 
